# TrainFlashAgent

./: .cursorrules  .gitignore  CLAUDE.md  README.md  README_zh.md  bench.py  test_gemma4_256k_context.py
.github/: copilot-instructions.md
docs/superpowers/plans/: 2026-04-06-trainflashagent.md
docs/superpowers/specs/: 2026-04-06-trainflashagent-design.md
skills/: 01-sandbox.md  02-diagnose.md  03-optimize.md  04-verify.md
src/trainflashagent/: __init__.py  diagnostics.py  governance.py  interventions.py  manager.py  sandbox.py  verification.py
src/trainflashagent_mcp/: server.py
tests/: test_diagnostics.py  test_integration.py  test_sandbox.py  test_verification.py
tools/trainflash_mcp/: README.md  pyproject.toml
tools/trainflash_mcp/scripts/: mcp_smoke_test.py
tools/trainflash_mcp/src/trainflash_mcp/: __init__.py  __main__.py  host_backend.py  mcp_server.py  monitor.py  nvml_backend.py  profiler_backend.py  session.py  summary.py
tools/trainflash_mcp/tests/: test_contract.py  test_mcp_server.py  test_monitor.py  test_nvml_backend.py  test_profiler_backend.py  test_snapshot_api.py  test_summary.py
